// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionHeader - Snapshot should render a rotated down Arrow if isExpanded is true 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 24,
      "justifyContent": "center",
    }
  }
  testID="accordionheader"
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#0376c9",
        "fontFamily": "Euclid Circular B",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
    testID="accordionheader-title"
  >
    Sample Accordion Header Title
  </Text>
  <View
    style={
      [
        {
          "marginLeft": 4,
        },
        {
          "transform": [
            {
              "rotate": "180deg",
            },
          ],
        },
      ]
    }
    testID="accordionheader-arrow-icon-animation"
  >
    <SvgMock
      color="#0376c9"
      height={16}
      name="ArrowDown"
      style={
        {
          "height": 16,
          "width": 16,
        }
      }
      testID="accordionheader-arrow-icon"
      width={16}
    />
  </View>
</TouchableOpacity>
`;

exports[`AccordionHeader - Snapshot should render default settings correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 24,
      "justifyContent": "center",
    }
  }
  testID="accordionheader"
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#0376c9",
        "fontFamily": "Euclid Circular B",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
    testID="accordionheader-title"
  >
    Sample Accordion Header Title
  </Text>
  <View
    style={
      [
        {
          "marginLeft": 4,
        },
        {
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
        },
      ]
    }
    testID="accordionheader-arrow-icon-animation"
  >
    <SvgMock
      color="#0376c9"
      height={16}
      name="ArrowDown"
      style={
        {
          "height": 16,
          "width": 16,
        }
      }
      testID="accordionheader-arrow-icon"
      width={16}
    />
  </View>
</TouchableOpacity>
`;
